# AoC2022

./: .gitignore  README.md  pyproject.toml
aoc/: __main__.py  const.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  utils.py
shims/: day_shim.py
