[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Niek Keijzer <hello@niekkeijzer.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "3.11"
click = "^8.1.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
